--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,7 @@
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["jest.config.ts", "node_modules", "dist"]
 }
