--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "25.0.3",
     "jest": "30.2.0",
     "mongodb-memory-server": "11.0.1",
+    "prettier": "^3.7.4",
     "ts-jest": "29.4.6",
     "ts-node-dev": "2.0.0",
     "typescript": "5.9.3"
